@@ -1,3 +1,12 @@
+2013-03-22  Pedro Alves  <palves@redhat.com>
+	    Yao Qi  <yao@codesourcery.com>
+	    Mark Kettenis  <kettenis@gnu.org>
+
+	* cli/cli-setshow.c (do_set_command) <var_uinteger>:
+	Don't let the user set the value to UINT_MAX directly.
+	<var_integer>: Don't let the user set the value to INT_MAX
+	directly.
+
 2013-03-22  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* remote.c (remote_unpush_target): New function.
